--- a/CTFd/translations/ro/LC_MESSAGES/messages.po
+++ b/CTFd/translations/ro/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgid "Search for matching users"
 msgstr "Caută utilizatori care se potrivesc"
 
 #: CTFd/themes/core-beta/templates/base.html:49
-msgid "Powered by CTFd"
+msgid "Powered by Astraea"
 msgstr "Funcționează cu CTFd"
 
 #: CTFd/themes/core-beta/templates/challenge.html:11
