--- a/CTFd/translations/ar/LC_MESSAGES/messages.po
+++ b/CTFd/translations/ar/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgid "Search for matching users"
 msgstr "البحث عن مستخدمين"
 
 #: CTFd/themes/core-beta/templates/base.html:49
-msgid "Powered by CTFd"
+msgid "Powered by Astraea"
 msgstr "مبني على CTFd"
 
 #: CTFd/themes/core-beta/templates/challenge.html:11
