--- a/CTFd/translations/ca/LC_MESSAGES/messages.po
+++ b/CTFd/translations/ca/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgid "Search for matching users"
 msgstr "Cerca usuaris coincidents"
 
 #: CTFd/themes/core-beta/templates/base.html:49
-msgid "Powered by CTFd"
+msgid "Powered by Astraea"
 msgstr "Impulsat per CTFd"
 
 #: CTFd/themes/core-beta/templates/challenge.html:11
