--- a/CTFd/translations/el/LC_MESSAGES/messages.po
+++ b/CTFd/translations/el/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgid "Search for matching users"
 msgstr "Αναζήτηση για αντίστοιχους χρήστες"
 
 #: CTFd/themes/core-beta/templates/base.html:49
-msgid "Powered by CTFd"
+msgid "Powered by Astraea"
 msgstr "Με την υποστήριξη του CTFd"
 
 #: CTFd/themes/core-beta/templates/challenge.html:11
