--- a/CTFd/translations/es/LC_MESSAGES/messages.po
+++ b/CTFd/translations/es/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgid "Search for matching users"
 msgstr "Buscar usuarios coincidentes"
 
 #: CTFd/themes/core-beta/templates/base.html:49
-msgid "Powered by CTFd"
+msgid "Powered by Astraea"
 msgstr "Desarrollado por CTFd"
 
 #: CTFd/themes/core-beta/templates/challenge.html:11
