--- a/CTFd/translations/fi/LC_MESSAGES/messages.po
+++ b/CTFd/translations/fi/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgid "Search for matching users"
 msgstr "Etsi vastaavia käyttäjiä"
 
 #: CTFd/themes/core-beta/templates/base.html:49
-msgid "Powered by CTFd"
+msgid "Powered by Astraea"
 msgstr "Palvelun tarjoaa CTFd"
 
 #: CTFd/themes/core-beta/templates/challenge.html:11
