--- a/CTFd/translations/pl/LC_MESSAGES/messages.po
+++ b/CTFd/translations/pl/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgid "Search for matching users"
 msgstr "Szukaj użytkownika"
 
 #: CTFd/themes/core-beta/templates/base.html:49
-msgid "Powered by CTFd"
+msgid "Powered by Astraea"
 msgstr "Obsługiwane przez CTFd"
 
 #: CTFd/themes/core-beta/templates/challenge.html:11
