--- a/CTFd/translations/sl/LC_MESSAGES/messages.po
+++ b/CTFd/translations/sl/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgid "Search for matching users"
 msgstr "Išči ustrezne uporabnike"
 
 #: CTFd/themes/core-beta/templates/base.html:49
-msgid "Powered by CTFd"
+msgid "Powered by Astraea"
 msgstr "Poganja CTFd"
 
 #: CTFd/themes/core-beta/templates/challenge.html:11
