--- a/CTFd/translations/zh_Hans_CN/LC_MESSAGES/messages.po
+++ b/CTFd/translations/zh_Hans_CN/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgid "Search for matching users"
 msgstr "搜索匹配用户"
 
 #: CTFd/themes/core-beta/templates/base.html:49
-msgid "Powered by CTFd"
+msgid "Powered by Astraea"
 msgstr "由 CTFd 提供"
 
 #: CTFd/themes/core-beta/templates/challenge.html:11
