--- a/CTFd/translations/zh_Hant_TW/LC_MESSAGES/messages.po
+++ b/CTFd/translations/zh_Hant_TW/LC_MESSAGES/messages.po
@@ -287,7 +287,7 @@ msgid "Search for matching users"
 msgstr "搜尋匹配的用戶"
 
 #: CTFd/themes/core-beta/templates/base.html:49
-msgid "Powered by CTFd"
+msgid "Powered by Astraea"
 msgstr "由 CTFd 提供支援"
 
 #: CTFd/themes/core-beta/templates/challenge.html:11
